--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,24 @@
 plugins {
-    id 'org.springframework.boot' version '2.5.13'
+    id 'org.springframework.boot' version '2.6.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+group = 'de.dhbw.tim21'
+version = '0.0.2-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 }
 
 tasks.named('test') {
